@startuml
hide circle
skinparam linetype ortho

entity "users" as users {
  * id : UUID <<PK>>
  --
  name         : varchar(120) <<NOT NULL>>
  email        : varchar(180) <<NOT NULL, UNIQUE (lower)>>
  login        : varchar(80)  <<NOT NULL, UNIQUE (lower)>>
  password_hash: varchar(255) <<NOT NULL>>
  created_at   : timestamptz  <<NOT NULL, default now()>>
  updated_at   : timestamptz  <<NOT NULL, default now()>>
}

entity "user_roles" as user_roles {
  * user_id : UUID <<PK, FK -> users.id, ON DELETE CASCADE>>
  * role    : varchar(20) <<PK, CHECK in ('CUSTOMER','OWNER','ADMIN')>>
  --
  + idx_user_roles_role(role)
}

entity "addresses" as addresses {
  * address_id   : bigserial <<PK>>
  --
  user_id         : UUID <<NOT NULL, UNIQUE, FK -> users.id, ON DELETE CASCADE>>
  street          : varchar(255)
  number          : varchar(20)
  complement      : varchar(100)
  neighborhood    : varchar(100)
  city            : varchar(100)
  state           : varchar(2)  <<CHECK: [A-Z]{2}>>
  zip_code        : varchar(9)  <<CHECK: [0-9]{5}-?[0-9]{3}>>
}

users ||--o{ user_roles : "tem\n0..N papéis"
users ||--o| addresses  : "tem\n0..1 endereço"
@enduml